log
Fri 09 Sep 2022 04:29:31 PM UTC: 
 tests:  0|6
total_score: 0/70
59d8aa5
Fri 09 Sep 2022 04:51:10 PM UTC: 
 hashmap.c | 26 +++++++++++++++++++++++---
 1 file changed, 23 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:52:11: error: ‘true’ undeclared (first use in this function)
   52 |     while(true){
      |           ^~~~
hashmap.c:52:11: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:59:16: error: ‘capacity’ undeclared (first use in this function)
   59 |       if (i >= capacity) break;
      |                ^~~~~~~~
hashmap.c: In function ‘createMap’:
hashmap.c:75:16: error: statement with no effect [-Werror=unused-value]
   75 |   map->current == -1;
      |   ~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
1c3a300
Fri 09 Sep 2022 04:51:39 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:75:16: error: statement with no effect [-Werror=unused-value]
   75 |   map->current == -1;
      |   ~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
4510350
Fri 09 Sep 2022 04:52:26 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
6a077b2
Fri 09 Sep 2022 04:54:06 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
72244b0
